Rename dataset to feature set where appropriate

--- a/report/appendix/experiments.tex
+++ b/report/appendix/experiments.tex
@@ -16,6 +16,6 @@ The following tables summarise the results of the algorithm comparison experimen
 
 \section{Experiment: Environment Representation} \label{app:experiment_environment_representation}
 
-The table \ref{tab:experiment_environment_cumulative} summarises the performance, according to the cumulative return, of the 5 algorithms in the four possible different environment representations: \acrshort{ohlcv} prices, \acrshort{ohlcv} prices with indicators, \acrshort{ohlcv} prices with covariance, and \acrshort{ohlcv} prices with indicators and covariance. The results are presented for three datasets: DowJones30, Commodities, and Currencies. 
+The table \ref{tab:experiment_environment_cumulative} summarises the performance, according to the cumulative return, of the five algorithms in the four possible different environment representations: \acrshort{ohlcv} prices, \acrshort{ohlcv} prices with indicators, \acrshort{ohlcv} prices with covariance, and \acrshort{ohlcv} prices with indicators and covariance. The results are presented for three datasets: DowJones30, Commodities, and Currencies. 
 
 \input{tables/experiment_environment_cumulative.tex}
