Add colour explanation in caption

--- a/report/tables/experiment_algorithms_dow30.tex
+++ b/report/tables/experiment_algorithms_dow30.tex
@@ -21,6 +21,6 @@
     \textbf{Equal} & 0.2066 & 0.3205 & 0.1476 & 1.3461 & -0.1541 \\ \hline
     \textbf{Index} & 0.1110 & 0.1692 & 0.1532 & 0.7635 & -0.1637 \\ \hline
 
-    \caption{Algorithm comparison results for the DowJones30 dataset.}
+    \caption{Algorithm comparison results for the DowJones30 dataset. The colour correspond to the best performing configurations, with blue for the best performing \acrshort{drl} algorithm and green for the best benchmark.}
     \label{tab:experiment_algorithms_dow30}
 \end{longtable}
