--- a/report/tables/experiment_environment_sharperatio.tex
+++ b/report/tables/experiment_environment_sharperatio.tex
@@ -7,7 +7,7 @@
     \textbf{Algorithm} & \textbf{Dataset} & \textbf{Simple} & \textbf{Indicators} & \textbf{Covariance} & \textbf{Complete}  \\ \midrule
     \endhead
 
-    \caption{Environment representation experiment comparison according to the Sharpe ratio.}
+    \caption{Environment representation experiment comparison according to the Sharpe ratio. The colour correspond to the best performing per row, with blue for the DowJones30 dataset and green for the Commodities dataset.}
     \label{tab:experiment_environment_sharpe}
 
     \endfoot
