Increase figure width

--- a/report/appendix/hyperparameters_experiment.tex
+++ b/report/appendix/hyperparameters_experiment.tex
@@ -8,7 +8,7 @@ The \texttt{wandb} library provides an interactive website to visualise the resu
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{figures/a2c_hyperparameter_tuning.png}
+\includegraphics[width=\textwidth]{figures/a2c_hyperparameter_tuning.png}
 \caption{Hyper-parameter tuning results for the \acrshort{a2c} algorithm. }
 \label{fig:a2c_hyperparameter_tuning}
 \end{figure}
