--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -144,4 +144,4 @@ As has been mentioned in the above experiments, the performance of the algorithm
 \input{tables/experiment_hyperparameters_dow30_simple.tex}
 \input{tables/experiment_hyperparameters_dow30_indicators.tex}
 
-By looking at the data presented in these tables, it is clear that finding the optimal configuration can have a significant impact on the performance of the algorithms. For instance, although the cumulative return for \acrshort{a2c} in the simple feature set only improves by 1\%, the Sharpe ratio increases from 1.32 to 1.43, meaning that the algorithm learns to better balance risk while maximising returns. Another example is the \acrshort{sac} algorithm, which achieves a cumulative return of 37.03\% with the tuned hyper-parameters, compared to 22.43\% with the default ones, and a Sharpe ratio of 1.45, which is significantly higher than the 0.97 of the default configuration. However, for the \acrshort{ppo}, \acrshort{ddpg} and \acrshort{td3} algorithms, there are no improvements and the default hyper-parameters perform better. This is due to only performing five trial runs, which is not enough to find the optimal configuration. With increased resources, a more extensive search could potentially yield better results for these algorithms.
+By looking at the data presented in these tables, it is clear that finding the optimal configuration can have a significant impact on the performance of the algorithms. For instance, although the cumulative return for \acrshort{a2c} in the simple feature set only improves by 1\%, the Sharpe ratio increases from 1.32 to 1.43, meaning that the algorithm learns to better balance risk while maximising returns. Another example is the \acrshort{sac} algorithm, which achieves a better performance than that of the default configuration. However, for the \acrshort{ppo}, \acrshort{ddpg} and \acrshort{td3} algorithms, there are no improvements and the default hyper-parameters perform better. Similarly, when looking at the indicators feature set, not all the algorithms show sign of improvements. These means that, for that particular algorithm, dataset and environment representation combination, the optimal hyper-parameter configuration has not been found. Understandably, due to the limited computational resources, the hyper-parameter search was very limited to only five runs, which is not sufficient for a thorough search.
