--- a/report/tables/experiment_hyperparameters_dow30_indicators.tex
+++ b/report/tables/experiment_hyperparameters_dow30_indicators.tex
@@ -11,25 +11,24 @@
     \label{tab:experiment_hyperparameters_indicators}
 
     \endfoot
-
-    \hline  
+ 
     \multirow{2}{*}{\textbf{A2C}}
     & Cumulative Return & 0.3139 & 0.3573 \\ \cline{2-4}
-    & Sharpe ratio & 1.2575 & \textcolor{blue}{1.3994} \\ \hline
+    & Sharpe ratio & 1.2575 & \textcolor{blue}{1.3994} \\ \midrule
 
     \multirow{2}{*}{\textbf{PPO}}
     & Cumulative Return & 0.2937 & 0.3134 \\ \cline{2-4}
-    & Sharpe ratio & 1.2407 & \textcolor{blue}{1.3679} \\ \hline
+    & Sharpe ratio & 1.2407 & \textcolor{blue}{1.3679} \\ \midrule
 
     \multirow{2}{*}{\textbf{DDPG}}
     & Cumulative Return & 0.3663 & 0.4086 \\ \cline{2-4}
-    & Sharpe ratio & 1.4896 & \textcolor{blue}{1.5597} \\ \hline
+    & Sharpe ratio & 1.4896 & \textcolor{blue}{1.5597} \\ \midrule
 
     \multirow{2}{*}{\textbf{TD3}}
     & Cumulative Return & 0.3456 & 0.2891 \\ \cline{2-4}
-    & Sharpe ratio & \textcolor{blue}{1.3938} & 1.2332 \\ \hline
+    & Sharpe ratio & \textcolor{blue}{1.3938} & 1.2332 \\ \midrule
 
     \multirow{2}{*}{\textbf{SAC}}
     & Cumulative Return & 0.3189 & 0.2646 \\ \cline{2-4}
-    & Sharpe ratio & \textcolor{blue}{1.3340} & 1.1688 \\ \hline
+    & Sharpe ratio & \textcolor{blue}{1.3340} & 1.1688 \\ \midrule
 \end{longtable}
