Add feature importance results

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -120,5 +120,6 @@
 \include{appendix/hyperparameters_experiment}
 \include{appendix/evaluation_metrics}
 \include{appendix/experiments}
+\include{appendix/explanations}
 
 \end{document}
