Add lime results

--- a/report/appendix/explanations.tex
+++ b/report/appendix/explanations.tex
@@ -19,3 +19,37 @@ Figure \ref{fig:mean_feature_importance_by_feature} shows the mean feature impor
     \caption{Mean feature importance per type of feature from the surrogate model.}
     \label{fig:mean_feature_importance_by_feature}
 \end{figure}
+
+\clearpage
+\section{Local Importance Model-Agnostic Explanation Results} \label{app:lime_explanations}
+
+With the \acrshort{lime} analysis, the explanations for the \acrshort{a2c} algorithm are provided. Since these are local observations, the following figures provide the explanation for the first time step on the test dataset of the assets not included in the main text. Values coloured in orange represent features that contribute positively to the prediction, while blue values indicate features that contribute negatively.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_lime_aapl.png}
+    \label{fig:a2c_lime_aapl}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the AAPL asset.}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_lime_csco.png}
+    \label{fig:a2c_lime_csco}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the CSCO asset.}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_lime_hon.png}
+    \label{fig:a2c_lime_hon}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the HON asset.}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_lime_v.png}
+    \label{fig:a2c_lime_v}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the V asset.}
+\end{figure}
+
