--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -113,7 +113,7 @@
 
 %%%%%% Appendices
 \appendix
-\include{appendix/drl_algorithms}
+\include{appendix/algorithms}
 \include{appendix/state_representation}
 \include{appendix/hyperparameter_tuning}
 \include{appendix/datasets}
