Add shap results

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -239,3 +239,4 @@
 \newacronym{bcs}{BCS}{British Computer Society}
 \newacronym{iet}{IET}{The Institution of Engineering and Technology}
 \newacronym{mse}{MSE}{Mean Squared Error}
+\newacronym{html}{HTML}{HyperText Markup Language}
