--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -183,7 +183,46 @@ Moving on to the local explanations of \acrshort{lime}, the direct explanations 
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{figures/a2c_lime_msft.png}
-    \label{fig:a2c_lime_msft}
     \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the MSFT asset. The orange bars indicate features that contribute positively to the prediction, while the blue bars indicate features that contribute negatively.}
+    \label{fig:a2c_lime_msft}
 \end{figure}
 
+\subsection{Shapley Additive Explanations Results} \label{sec:shap-results}
+
+Finally, the results of the \acrshort{shap} analysis are presented. These provide a global view of the feature importance across all time steps and assets, as well as a local interpretation for individual predictions. As with the case of \acrshort{lime}, instead of using a surrogate model, the explanations of the \acrshort{a2c} model are provided in a direct manner. Since the predictions of the output are weight allocations, the \acrshort{shap} values presented in this section correspond to the asset AAPL asset, but the interpretations can be generalised to other assets as well. 
+
+Looking at Figure \ref{fig:a2c_shap_beeswarm_aapl}, the x-axis represents the \acrshort{shap} value, which measures the impact of a feature on the model's output; while the y-axis displays the top features. Each point in the beeswarm plot represents a single prediction, with the colour indicating whether its value is low, coloured in blue, or high, coloured in magenta. The beeswarm plot provides a visual representation of the distribution of \acrshort{shap} values for each feature, allowing for an easy comparison of their importance. Surprisingly, the most important feature for the AAPL asset is the low price of the MSFT asset and, by visual inspection, the high values of the low price of MSFT push the AAPL allocation lower, while the low values of the low price of MSFT push the AAPL allocation higher. However, this is not quite significant as there is a significant clustering of data points around the zero, indicating that for those, the low price of MSFT does not have an impact on AAPL's allocation. 
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_shap_beeswarm_aapl.png}
+    \caption{Beeswarm \acrshort{shap} explanations for the \acrshort{a2c} algorithm for the AAPL asset. The x-axis represents the \acrshort{shap} values, whilst the y-axis represents the top features. The colour indicates the feature value, with magenta being high and blue being low.}
+    \label{fig:a2c_shap_beeswarm_aapl}
+\end{figure}
+
+The \texttt{shap} Python library provides numerous visualisations to explain the prediction of a model. An interesting one is the force plot, shown in Figure \ref{fig:a2c_shap_forceplot_aapl}, for the AAPL weight allocation and the contribution of all features. The force plot visualises the impact of each feature on the model's weight allocation over the entire test dataset ordered by time. Positive values push the allocation higher, while negative values push it lower. The baseline is the average weight allocation across all time steps. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_shap_forceplot_aapl.png}
+    \caption{\acrshort{shap} force plot for the weight allocation of the AAPL asset for the \acrshort{a2c} algorithm.}
+    \label{fig:a2c_shap_forceplot_aapl}
+\end{figure}
+
+The \texttt{shap} library provides the output in an interactive \acrfull{html} format that allows us to interact with the visualisation and gain deeper insights into the model's behaviour. From the beeswarm plot in Figure \ref{fig:a2c_shap_beeswarm_aapl}, the most important feature for the AAPL asset is the low price of MSFT. Using the force plot, it is possible to single out the effects of this particular feature over the test period, as shown in Figure \ref{fig:a2c_shap_forceplot_aapl_lowmsft}, as well as its isolated effect in one specific prediction. Its impact is very well-defined as for approximately the first 30 samples, it has a positive contribution increasing the AAPL allocation, while for the rest of the time steps, it has a negative contribution decreasing the AAPL allocation.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_shap_forceplot_aapl_lowmsft.png}
+    \caption{\acrshort{shap} force plot for the weight allocation of the AAPL asset for the \acrshort{a2c} algorithm.}
+    \label{fig:a2c_shap_forceplot_aapl_lowmsft}
+\end{figure}
+
+Finally, Lundberg and Lee (2017) \cite{Lundberg2017} showed that \acrshort{lime} is a subset of \acrshort{shap}, it is possible to obtain local explanations using the \texttt{shap} library. Figure \ref{fig:a2c_shap_forceplot_singleobs_aapl} shows the local explanation for the AAPL asset at the first time step of the test dataset, which corresponds to the 2nd of January 2024. Although the visualisation is different, the information it provides is similar to that of \acrshort{lime}. Shown horizontally, the features shown in magenta push the allocation higher, while those in blue push it lower. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/a2c_shap_forceplot_singleobs_aapl.png}
+    \caption{\acrshort{shap} force plot for the weight allocation of the AAPL asset for the \acrshort{a2c} algorithm at the first time step of the test dataset.}
+    \label{fig:a2c_shap_forceplot_singleobs_aapl}
+\end{figure}
